# meme-search-engine

./: .gitignore  .prettierignore  .rustfmt.toml  Cargo.toml  README.md  build.rs  clip_server.py  clip_server_config.json  config2.json  faiss_bench_quantizer.py  formats.json  frontend_config.json  generate_queries_bin.py  genseahash.py  kmeans.py  load_embedding.py  main.py  mse.py  mse_config.json  ocr.mjs  ocr.py  ocr_config.json  package.json  perf_test.py  pyproject.toml  slow_dump_parse_script.py  thumbnailer.py  thumbnailer_config.json
.sqlx/: query-80b42ff05db7c2ccd104f2c3e8b50803117eea987d16e403a2c6873e31200ac3.json  query-d56ec6cf262f4f17cd2aaa1a6413bf0fec1d7a35661cfd02feae01e94b807b7b.json  query-ec2da4ab11ede7a9a468ff3a50c55e0f6503fddd369f2c3031f39c0759bb97a0.json
aitemplate/: model.py  run.py
diskann/: aopq_train.py  chainq.py  opq_test.py  rabitq.py  scalar_quantize.py  vec_dist.py
docker/: docker-compose.yml
meme-rater/: active_learning.py  active_learning_find_top.py  active_learning_gradients.py  auroc_test.py  compute_cdf.py  copy_into_queue.py  crawler.py  ensemble_to_wide_model.py  eval.py  extract_test_set.py  final_eval_results.py  library_processing_server.py  load_from_json.py  meme_pipeline.py  model.py  pca.py  rater_mse_config.json  rater_server.py  roc_plot.py  run_graph.py  shared.py  test_set.json  train.py
misc/: clip_accursed.py  eval.html  top.json
sae/: compare_plots.py  export_features.py  model.py  shared.py  shuffle.py  train.py
src/: common.rs  dump_processor.rs  generate_index_shard.rs  get_embedding.py  main.rs  ocr.rs  (+4 more)
(+6 files in other folders)
