[project]
name = "meme-search-engine"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
  "aiohttp>=3.13.3",
  "msgpack>=1.1.2",
  "open-clip-torch>=2.31.0",
  "pillow>=12.1.1",
  "prometheus-client>=0.17.1",
  "transformers>=5.3.0",
]

[tool.ruff]
line-length = 120
